# sy-recommenders

./: .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  smoke.yml
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  CODEMAP.md  IMPLEMENTATION_PLAN.md  tools_reference.md  usage_examples.md
mcp_server/: __init__.py  auth.py  deps.py  errors.py  http_transport.py  schemas.py  serialization.py  server.py  state.py
mcp_server/tools/: __init__.py  data.py  evaluate.py  handles.py  ranking.py  score.py  split.py
skill/: SKILL.md
skill/playbooks/: 01_prepare_data.md  02_split.md  03_train.md  04_evaluate.md  05_optimize.md  06_recommend.md
skill/scripts/: eval_quickstart.py  lightgbm_tinycriteo.py  ncf_movielens.py  sar_custom.py  sar_movielens.py  sasrec_amazon.py  tfidf_covid.py  tfidf_custom.py
skill/snippets/: eval_ranking.md  load_movielens.md  split_random.md
tests/: conftest.py  test_auth.py  test_data_tools.py  test_deps.py  test_errors.py  test_eval_tools.py  test_groups.yml  test_handle_tools.py  test_http_transport.py  test_ranking_tools.py  test_score_tools.py  test_script_help.py  test_serialization.py  test_server.py  test_smoke_movielens.py  test_smoke_ncf_movielens.py  test_smoke_sar_custom.py  test_smoke_sasrec_amazon.py  test_smoke_tfidf_custom.py  test_split_tools.py  test_state.py  test_tfidf_covid.py  test_type_annotations.py
