[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommenders-ai"
version = "0.2.0"
description = "MCP server + Agent Skill wrapper for Microsoft Recommenders v1.2.1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Recommenders AI Contributors" },
]
keywords = ["recommenders", "mcp", "recommendation-systems", "collaborative-filtering", "agent-skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "recommenders>=1.2.1,<2",
    "numpy<2",
    "mcp>=1.0,<2",
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pandas>=2.0,<3",
    "pyarrow>=10",
    "filelock>=3",
    "cloudpickle>=2",
]

[project.optional-dependencies]
dev = [
    "black>=23",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-mock>=3",
    "httpx>=0.27",
]
gpu = [
    "recommenders[gpu]>=1.2.1,<2",
]
spark = [
    "recommenders[spark]>=1.2.1,<2",
]
all = [
    "recommenders[all]>=1.2.1,<2",
]

[project.scripts]
recommenders-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/noahwang550/sy-recommenders"
Repository = "https://github.com/noahwang550/sy-recommenders"
Issues = "https://github.com/noahwang550/sy-recommenders/issues"
Upstream = "https://github.com/microsoft/recommenders"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "skill*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -m 'not spark'"
markers = [
    "notebooks: CPU notebook / smoke tests requiring network or real data",
    "gpu: GPU-dependent model tests",
    "spark: PySpark tests (excluded by default)",
    "experimental: Optional extra dependency tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.coverage.run]
source = ["mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
